# document-signing-service

./: CMakeLists.txt  README.md  main.cpp
include/: common_types.hpp  document_hasher.hpp  file_utils.hpp  html2pdf_converter.hpp  html_template_processor.hpp  logger.hpp  message_service.hpp  parsers.hpp  pdf_stamper.hpp  signature_service.hpp  time_utils.hpp  wkhtml2pdf_wrapper.hpp
resources/: application.env  config.ini  message_template.txt  test_data.json
source/: document_hasher.cpp  file_utils.cpp  html2pdf_converter.cpp  html_template_processor.cpp  logger.cpp  message_service.cpp  parsers.cpp  pdf_stamper.cpp  signature_service.cpp  time_utils.cpp  wkhtml2pdf_wrapper.cpp
